<resources>
    <string name="app_name">FlyChat</string>
    <string name="error_title">Ошибка</string>
    <string name="ok">OK</string>
    <string name="error_empty_field">Все поля должны быть заполнены!</string>
    <string name="login_title">Вход</string>
    <string name="register_title">Регистрация</string>
    <string name="email_hint">E-mail</string>
    <string name="password_hint">Пароль</string>
    <string name="confirm_password_hint">Подтвердите пароль</string>
    <string name="name_hint">Отображаемое имя</string>
    <string name="have_account">У меня уже есть аккаунт</string>
    <string name="error_password_confirm">Пароли должны совпадать!</string>
    <string name="default_avatar">
        https://firebasestorage.googleapis.com/v0/b/flychat-ef44a.appspot.com/o/default_avatar.jpg?alt=media&amp;token=28f3e58c-9d87-40c2-8010-3ce9f9e0989a
    </string>
</resources>