<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/light_blue"
    tools:context=".RegisterActivity"
    android:paddingStart="30dp"
    android:paddingEnd="30dp">

    <include layout="@layout/logo"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:layout_marginTop="100dp"/>

    <EditText
        android:id="@+id/field_name_reg"
        android:inputType="textEmailAddress"
        android:hint="@string/name_hint"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:background="@drawable/field_bg"
        android:textCursorDrawable="@drawable/cursor_drawable"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:paddingStart="20dp"
        android:paddingEnd="20dp"/>

    <EditText
        android:id="@+id/field_email_reg"
        android:inputType="textEmailAddress"
        android:hint="@string/email_hint"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:background="@drawable/field_bg"
        android:textCursorDrawable="@drawable/cursor_drawable"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:paddingStart="20dp"
        android:paddingEnd="20dp"/>

    <EditText
        android:id="@+id/field_password_reg"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:background="@drawable/field_bg"
        android:hint="@string/password_hint"
        android:inputType="textPassword"
        android:paddingStart="20dp"
        android:paddingTop="10dp"
        android:paddingEnd="20dp"
        android:paddingBottom="10dp"
        android:textCursorDrawable="@drawable/cursor_drawable" />

    <EditText
        android:id="@+id/field_confirm_password_reg"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:background="@drawable/field_bg"
        android:hint="@string/confirm_password_hint"
        android:inputType="textPassword"
        android:paddingStart="20dp"
        android:paddingTop="10dp"
        android:paddingEnd="20dp"
        android:paddingBottom="10dp"
        android:textCursorDrawable="@drawable/cursor_drawable" />

    <Button
        android:id="@+id/btn_register"
        android:layout_marginTop="50dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/primary_btn_bg"
        android:textSize="15sp"
        android:text="@string/register_title"
        android:textColor="@color/white"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:id="@+id/btn_to_login"
        android:text="@string/have_account"
        android:background="@drawable/primary_btn_bg"
        android:textColor="@color/white" />

</LinearLayout>