<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/primary"
    android:orientation="vertical"
    android:paddingStart="30dp"
    android:paddingEnd="30dp"
    tools:context=".LoginActivity">

    <include layout="@layout/logo"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:layout_marginTop="150dp"/>

    <EditText
        android:id="@+id/field_email"
        android:inputType="textEmailAddress"
        android:hint="@string/email_hint"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:background="@drawable/field_bg"
        android:textCursorDrawable="@drawable/cursor_drawable"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:paddingStart="20dp"
        android:paddingEnd="20dp"/>

    <EditText
        android:id="@+id/field_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:background="@drawable/field_bg"
        android:hint="@string/password_hint"
        android:inputType="textPassword"
        android:paddingStart="20dp"
        android:paddingTop="10dp"
        android:paddingEnd="20dp"
        android:paddingBottom="10dp"
        android:textCursorDrawable="@drawable/cursor_drawable" />

    <Button
        android:id="@+id/btn_login"
        android:layout_marginTop="60dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/primary_btn_bg"
        android:textSize="15sp"
        android:text="@string/login_title"
        android:textColor="@color/white"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:id="@+id/btn_to_register"
        android:text="@string/register_title"
        android:background="@drawable/primary_btn_bg"
        android:textColor="@color/white" />

</LinearLayout>